--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color: #f7ddff;">
 
     <h1 style="font-size: 45px;">Marissa Carr</h1>
-    <p><img src="me.jpg" width="300" height = "200"></p>
+    <p><img src="me.JPG" width="300" height = "200"></p>
    
     <p>I was born in Baltimore, Maryland.
     <br> I am an advertising major and I just applied for a dual in the iSchool!
